[gd_scene load_steps=4 format=3 uid="uid://biirprfvgh5j5"]

[ext_resource type="Script" path="res://Scenes/Objects/Guns/machine_gun.gd" id="1_vh8gb"]
[ext_resource type="Texture2D" uid="uid://2bqdtnld3yp8" path="res://Sprite Assets/Guns/SimpleGun.png" id="2_v55oh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fi23"]
size = Vector2(2, 160)

[node name="MachineGun" type="Node2D"]
script = ExtResource("1_vh8gb")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_6fi23")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v55oh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 4.93
gravity = Vector2(0, 0)
initial_velocity_min = 54.79
initial_velocity_max = 191.78
scale_amount_min = 0.3
scale_amount_max = 0.5
color = Color(0.666667, 0.819608, 0, 1)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -23)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
